# video-cover-picker

./: .gitignore  .gitmodules  .ycm_extra_conf.py  README.md  build.sh
exps/001_fit_feature/: classifier.py  fit_pairs.py  fit_weights.py  prepareDb.py  test_weights.py
exps/001_fit_feature/data/: score.csv  score_with_label.csv
src/: CMakeLists.txt  demo.cpp  demo_bak20180301.cpp  demo_faceModel.cpp  demo_iqaPool.cpp  demo_samples.cpp  demo_singleColorImage.cpp  demo_video1000_003.cpp  exportScores.cpp  faceModel.cpp  faceModel.h  nriqa.cpp
src/algorithms/: CMakeLists.txt  brisque.cpp  brisque.h  faceModel.cpp  faceModel.h  iqa.cpp  iqa.h  iqa_pool.cpp  iqa_pool.h  ittivsmodel.cpp  ittivsmodel.h  nriqa.cpp  nriqa.h
src/algorithms/utils/: fileUtil.h
src/java/: CMakeLists.txt
src/java/src/com/resetta/iqa/: Iqa.java
src/jni/: CMakeLists.txt  com_resetta_iqa_iqa.cpp  com_resetta_iqa_iqa.h  iqa_jni.cpp
src/utils/: fileUtil.h
